<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_appointments">

    <fragment
        android:id="@+id/navigation_appointments"
        android:name="com.hospital.app.ui.appointments.AppointmentsFragment"
        android:label="@string/title_appointments"
        tools:layout="@layout/fragment_appointments" />

    <fragment
        android:id="@+id/navigation_cases"
        android:name="com.hospital.app.ui.cases.CasesFragment"
        android:label="@string/title_cases"
        tools:layout="@layout/fragment_cases" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.hospital.app.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />
</navigation>